@@ -26,7 +26,10 @@ class DeviceParser extends AbstractParser
         list($regex, $matches) = $this->tryMatch($this->regexes['device_parsers'], $userAgent);
 
         if ($matches) {
-            $device->family = $this->replaceString($regex, 'device_replacement', $matches[1]);
+            $device->family = $this->multiReplace($regex, 'device_replacement', $matches[1], $matches);            
+            $device->brand  = $this->multiReplace($regex, 'brand_replacement' , null, $matches);
+            $deviceModelDefault = $matches[1] != 'Other' ? $matches[1] : null;
+            $device->model  = $this->multiReplace($regex, 'model_replacement' , $deviceModelDefault, $matches);
         }
 
         return $device;
