@@ -11,4 +11,9 @@ namespace UAParser\Result;
 
 class Device extends AbstractSoftware
 {
+    /** @var string */
+    public $brand;
+
+    /** @var string */
+    public $model;
 }
