@@ -35,10 +35,8 @@ class ParserTest extends AbstractParserTest
     {
         $resources = Finder::create()
             ->files()
-            ->name('test_device.yaml')
-            ->name('*os*.yaml')
-            ->notName('test_device.yaml')
-            ->notName('pgts_browser_list-orig.yaml');
+            ->name('additional_os_tests.yaml')
+            ->name('test_user_agent_parser_os.yaml');
 
         return static::createTestData($resources);
     }
@@ -47,10 +45,9 @@ class ParserTest extends AbstractParserTest
     {
         $resources = Finder::create()
             ->files()
-            ->name('*.yaml')
-            ->notName('*os*')
-            ->notName('test_device.yaml')
-            ->notName('pgts_browser_list-orig.yaml');
+            ->name('firefox_user_agent_strings.yaml')
+            ->name('pgts_browser_list.yaml')
+            ->name('test_user_agent_parser.yaml');
 
         return static::createTestData($resources);
     }
@@ -73,11 +70,12 @@ class ParserTest extends AbstractParserTest
     }
 
     /** @dataProvider getDeviceTestData */
-    public function testDeviceParsing($userAgent, array $jsUserAgent, $family)
+    public function testDeviceParsing($userAgent, array $jsUserAgent, $family, $major, $minor, $patch, $patchMinor, $brand, $model)
     {
         $result = $this->parser->parse($userAgent, $jsUserAgent);
-
         $this->assertSame($family, $result->device->family);
+        $this->assertSame($brand,  $result->device->brand);
+        $this->assertSame($model,  $result->device->model);
     }
 
     /** @dataProvider getOsTestData */
@@ -198,6 +196,8 @@ class ParserTest extends AbstractParserTest
             isset($testCase['minor']) ? $testCase['minor'] : null,
             isset($testCase['patch']) ? $testCase['patch'] : null,
             isset($testCase['patch_minor']) ? $testCase['patch_minor'] : null,
+            isset($testCase['brand']) ? $testCase['brand'] : null,
+            isset($testCase['model']) ? $testCase['model'] : null,
             $resource->getFilename()
         );
     }
